package Ejercicio1;

public class Main {
    public static void main(String[] args) {
        Vehiculos.ejecutar();
    }
}